# ZoneDetectEsp32

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
example/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
example/main/: CMakeLists.txt  idf_component.yml  main.c
